<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZipZop</string>
    <!-- Authentication -->
    <!-- LoginFrag -->
    <string name="hint_login_email">Digite seu e-mail</string>
    <string name="hint_login_password">Digite sua senha</string>
    <string name="text_dont_have_account">Não tem conta? Cadastre-se!</string>
    <string name="login">Logar</string>
    <string name="edt_invalid">Preencha todos os campos primeiro</string>
    <string name="toast_default_login_error">Não foi possivel logar na sua conta</string>
    <!-- SignUpFrag -->
    <string name="hint_signup_name">"Digite seu nome</string>
    <string name="button_signup">Cadastrar</string>
    <string name="toast_default_signin_error">Não foi possivel criar a sua conta</string>
    <string name="toast_email_collision">E-mail já cadastrado</string>
    <string name="toast_weak_password">Insira uma senha mais forte</string>
    <string name="toast_invalid_credentials">E-mail ou senha inválidos</string>

    <!--Home -->
    <!-- MessagesFrag -->
    <string name="title_messages_frag">Mensagens</string>
    <!-- ContactsFrag -->
    <string name="title_contacts_frag">Contatos</string>
    <string name="dialog_title_new_contact">Novo contato</string>
    <string name="dialog_message_new_contact">Ao mandar uma mensagem este email será salvo em seus contatos</string>
    <string name="item_new_group">Criar novo grupo</string>
    <string name="dialog_new_contact_positive">Adicionar</string>
    <string name="dialog_new_contact_negative">Cancelar</string>
    <string name="toast_new_contact_empty">Você deve preencher o campo primeiro</string>
    <string name="toast_new_contact_same_email">Não dá para mandar menssagem para si mesmo</string>
    <!-- Menu Itens -->
    <string name="menu_signout">Sair</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_search">Pesquisar</string>

    <!-- CreateGroupActivity -->
    <string name="toolbar_create_group_title">Novo Grupo</string>
    <string name="toolbar_create_group_subtitle1">de</string>
    <string name="toolbar_create_group_subtitle2">selecionados</string>

    <!-- ConfigGroupActivity -->
    <string name="activity_config_group_title">Configurar Grupo</string>
    <string name="toolbar_config_group_subtitle">Adicionar nome</string>
    <string name="edt_group_name_hint">Insira o nome do grupo aqui...</string>
    <string name="txt_config_group_hint">Insira um nome e ícone(opcional) para o grupo</string>
    <string name="txt_participants_count">Participantes:</string>
    <string name="toast_empty_group_name">O campo de nome não deve estar vazio</string>
    <string name="new_group_message">Grupo criado por</string>

    <!-- SettingsActivity -->
    <string name="settings_act_label">Configurações</string>
    <string name="hint_user_name">Nome de usuário</string>
    <string name="explained_username">Esse nome será exibido para seus contatos</string>
    <string name="welcome_title">Primeiros passos</string>
    <string name="welcome_message">Escolha uma imagem de perfil e um nome de usuário (você pode edita-los depois)</string>
    <string name="username_title">Nome de Usuário</string>
    <string name="toast_need_camera_permission">Você precisa permitir o acesso a câmera ao app</string>
    <string name="toast_need_storage_permission">Você precisa permitir o acesso ao armazenamento ao app</string>
    <!-- Dialog Image -->
    <string name="dialog_settings_title">Escolha uma opção</string>
    <string name="txt_remove_photo">Remover Foto</string>
    <string name="txt_from_gallery">Gallery</string>
    <string name="txt_from_camera">Camera</string>
    <string name="error_pick_from_gallery">Não foi possível abrir a galeria</string>
    <string name="error_pick_from_camera">Não foi possível abrir a camera</string>
    <!-- Dialog UserName -->
    <string name="dialog_edt_username_title">Alternar nome de usuário</string>
    <string name="dialog_edt_username_positive">Alterar</string>
    <string name="dialog_edt_username_negative">Cancelar</string>

    <!-- ChatAct -->
    <string name="hint_new_message">Digite uma mensagem</string>
    <string name="toast_empty_message">Digite uma mensagem primeiro</string>
</resources>